<resources>
    <string name="app_name">Pose Detection App</string>

    <string name="tfe_pn_request_permission" translation_description="Request camera permission [CHAR_LIMIT=40]">This
        app needs camera permission.
    </string>
    <string name="tfe_pn_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This
        device doesn\'t support Camera2 API.
    </string>
    <string name="capture_description">Capture Pose</string>
    <string name="record_description">Record Pose</string>

    <string name="start_recording">Start Recording</string>
    <string name="record_audio">Record Audio</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="recorder">Record Pose Detection</string>
    <string name="allRecordings">All Recordings</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="settings_video">Recording Settings</string>
    <string name="record_quality_title">Video Quality</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="tag_line">Please login or register to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user_register_now">New User? Register Now.</string>
    <string name="name">Name</string>
    <string name="have_account">Already have account? Login Now.</string>
    <string name="age">Age</string>
    <string name="home_description">Welcome to Pose Detection App. To record pose detection, tap on Start Recording and allow all permissions. To stop recording, you need to press back from camera and then press on Stop Recording. Recording will be found in All Recordings menu.</string>
</resources>
